# python-dev-setup

./: .gitattributes  .gitignore  404.html  README.md  excel_to_text_dump.py  git_dif_excel_demo.xlsx  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  sync_git_branches.sh  sync_or_create_all_mds.py
1-run_scripts_cmd_line/: index.html
2-git_version_control/: archive_branch.sh  index.html
2-git_version_control/archive_branch/: index.html
2-git_version_control/git_dif_excel_workaround/: index.html
2-git_version_control/git_lfs/: index.html
2-git_version_control/sync_git_branches/: index.html
2-git_version_control/useful_git_commands/: index.html
3-edit_with_vscode/: index.html
4-mambaforge_python_env/: index.html
5-poetry_package_manager/: index.html
css/: custom_style.css
docs/: 1-run_scripts_cmd_line.md  3-edit_with_vscode.md  4-mambaforge_python_env.md  5-poetry_package_manager.md  git_version_control.md  index.md  old.md  run_scripts_cmd_line.md
docs/2-git_version_control/: git_dif_excel_workaround.md  git_lfs.md  index.md  useful_git_commands.md
docs/css/: custom_style.css
git_version_control/: index.html
old/: index.html
run_scripts_cmd_line/: index.html
search/: search_index.json
