[tool.poetry]
name = "python-dev-setup"
version = "1.0.0"
description = "This repository is meant to help Python developers setup their environment for increased productivity."
readme = "README.md"
repository = "https://github.com/jillvillany/python-dev-setup"
authors = [
    "Jill Villany <jillian.villany@ibm.com>"
]

[tool.poetry.dependencies]
python = "==3.9.6"
pandas = "==1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
