[tool.poetry]
name = "python-dev-setup"
version = "1.0.0"
description = "This repository is meant to help Python developers setup their environment for increased productivity."
readme = "README.md"
repository = "https://github.com/jillvillany/python-dev-setup"
authors = [
    "Jill Villany <jillian.villany@ibm.com>"
]

[tool.poetry.dependencies]
python = "3.9.6"
mkdocs = "^1.3.1"
mkdocs-material = "^8.4.0"
mkdocs-material-extensions = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
