[tool.poetry]
name = "python-dev-setup"
version = "0.1.0"
description = ""
authors = ["Jill Villany <jillian.villany@ibm.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.3.1"
mkdocs-material = "^8.4.0"
mkdocs-material-extensions = "^1.0.3"
pandas = "^1.4.3"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
